<resources>
    <string name="app_name">CrmWebAppAndroid</string>
    <string name="hintEmail">Email</string>
    <string name="hintPass">Password</string>
    <string name="btnLoginTxt">Login</string>
    <string name="BtnNewCompanyTxt">New Company</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FragmentCalenderName">Calender</string>
    <string name="fragmentCustomerName">Customers</string>

    <string name="calender">Calender</string>
    <string name="todo">To Do</string>
    <string name="customer">Customers</string>
    <string name="customer_underline"><u>Customers</u></string>
    <string name="employee">Employees</string>
    <string name="employee_underline"><u>Employees</u></string>
    <string name="service">Services</string>
    <string name="service_underline"><u>Services</u></string>
    <string name="hintDate">Date</string>
    <string name="hintTime">Time</string>
    <string name="hintFirstName">Firstname</string>
    <string name="hintLastName">Lastname</string>
    <string name="hintPhone">Phone</string>
    <string name="hintComment">Comments</string>
    <string name="newAppointment">New appointment</string>
    <string name="btnAdd">Add</string>
    <string name="btnApply">Apply</string>
    <string name="btnDelete">Delete</string>
    <string name="AppointmentCard">Appointment Card</string>
    <string name="newCustomer">New Customer</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSubmit">Submit</string>
    <string name="settings">Settings</string>
    <string name="hintStreetnumber">Nr</string>
    <string name="hintPostCode">Post Code</string>
    <string name="hintpostarea">Post Area</string>
    <string name="hintApartment">Apt. Nr.</string>
    <string name="hintBirthday">Birthday</string>
    <string name="Firstname">Firstname</string>
    <string name="Lastname">Lastname</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="Level">Level</string>
    <string name="Address">Address</string>
    <string name="hintStreet">Street</string>
    <string name="hint_street_number">Street Number</string>
    <string name="hintPostArea">Post Area</string>
    <string name="appointmentinfo">Appointment Info</string>

    <string name="hintTitle">Title</string>
    <string name="hintDescription"><u>Description</u></string>
    <string name="hintDuration">Duration (Minutes)</string>
    <string name="hintPrice">Price (NOK)</string>
    <string name="testTitle">testTitle</string>
    <string name="testDescription">testDescription</string>
    <string name="testDuration">10</string>
    <string name="testPrice">55</string>
    <string name="btnEdit">Edit</string>
    <string name="deleteServiceDialog">Are you sure you want to Delete this service?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <string name="missingNameMsg">Name can not be empty</string>
    <string name="missingDescriptionMsg">Description can not be empty</string>
    <string name="missingDurationMsg">Duration can not be empty</string>
    <string name="missingPriceMsg">Price can not be empty</string>
    <string name="code">code</string>
    <string name="todotoday">Todo\'s today</string>
    <string name="appointmentsToday">Appointments</string>
    <string name="addAppointment">Add appointment</string>
    <string name="pickDate">Pick date</string>
    <string name="name">Name</string>
    <string name="rating">Rating</string>
    <string name="messageCustomer">Message</string>
    <string name="appointmentHistory">History</string>
    <string name="employeeActivity">Employee activity</string>
    <string name="servicePopularity">Service popularity</string>
    <string name="emptyStar">Star</string>
    <string name="placeholderValue">0</string>
    <string name="placeholderText">placeholder</string>
    <string name="calanderIcon">calender</string>
    <string name="emailIcon">email</string>
    <string name="historyIcon">history icon</string>
    <string name="addIcon">add icon</string>
    <string name="sendEmailToCustomer">Send email to customer</string>
    <string name="btnSend">Send</string>
    <string name="messageSendSuccess">Message send</string>
    <string name="placeholderDate">01/01/2020</string>
    <string name="placeholderTime">12:00</string>
    <string name="btnMessage">Message</string>
    <string name="btnRating">Get rated</string>
    <string name="btnResetPassword">Reset password</string>
    <string name="btnLogout">Logout</string>
    <string name="userInfo">User Info</string>
    <string name="send_email">Send email</string>
    <string name="Continue">Continue</string>
    <string name="See_e_mail_for_reset_code">See e-mail for reset code!</string>
    <string name="addTodoBT">Add Todo</string>
    <string name="enterTodoEt">Enter Todo</string>
    <string name="todos">Todos</string>
    <string name="Services">Services</string>
    <string name="NewService">New Service</string>
    <string name="EditService">Edit Service</string>
    <string name="home">Home</string>
    <string name="titleAppointmentHistory">Appointment history</string>
    <string name="recipient">Recipient</string>
    <string name="code_verified">code verified</string>
    <string name="code_not_verified">code not verified!</string>
</resources>