<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp"
            android:paddingTop="25dp"
            tools:context=".uicomponents.fragments.services.NewServiceFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editAppTitle"
                android:hint="@string/hintTitle"
                app:endIconMode="clear_text"
                style="@style/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAppTxtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/testTitle"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editAppDescription"
                android:hint="@string/hintDescription"
                app:endIconMode="clear_text"
                style="@style/textInputLayout" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAppTxtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/testDescription"
                    android:inputType="text|textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editAppDuration"
                android:hint="@string/hintDuration"
                app:endIconMode="clear_text"
                style="@style/textInputLayout" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAppTxtDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/testDuration"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editAppPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPrice"
                app:endIconMode="clear_text"
                style="@style/textInputLayout" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAppTxtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/testPrice"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/btnCancel" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/btnSubmit" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</layout>
















