<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background" />

            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintPass"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnLoginTxt" />

            <Button
                android:id="@+id/newCompanybtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BtnNewCompanyTxt" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
