<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".uicomponents.fragments.services.InspectServiceFragment">

            <LinearLayout
                android:id="@+id/cardTitle"
                android:orientation="vertical"
                style="@style/card">
                <TextView
                    android:id="@+id/tvTitle"
                    android:text="@string/hintTitle"
                    style="@style/cardTitle" />
                <TextView
                    android:id="@+id/tvTitleValue"
                    android:text="@string/hintTitle"
                    style="@style/cardValue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardDescription"
                android:orientation="vertical"
                style="@style/card">
                <TextView
                    android:id="@+id/tvDescription"
                    android:text="@string/hintDescription"
                    style="@style/cardTitle" />
                <TextView
                    android:id="@+id/tvDescriptionValue"
                    android:text="@string/hintDescription"
                    style="@style/cardValue" />
            </LinearLayout>

        <LinearLayout
            android:id="@+id/cardDuration"
            android:orientation="vertical"
            style="@style/card">
                <TextView
                    android:id="@+id/tvDuration"
                    android:text="@string/hintDuration"
                    style="@style/cardTitle" />
                <TextView
                    android:id="@+id/tvDurationValue"
                    android:text="@string/hintDuration"
                    style="@style/cardValue" />
            </LinearLayout>

        <LinearLayout
            android:id="@+id/cardPrice"
            android:orientation="vertical"
            style="@style/card">
                <TextView
                    android:id="@+id/tvPrice"
                    android:text="@string/hintPrice"
                    style="@style/cardTitle" />
                <TextView
                    android:id="@+id/tvPriceValue"
                    android:text="@string/hintPrice"
                    style="@style/cardValue" />
            </LinearLayout>

            <FrameLayout
                style="@style/btnFrameLayout">

                <Button
                    android:id="@+id/btnEditAppEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/btnUpdate" />

                <Button
                    android:id="@+id/btnEditAppDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/btnDelete" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</layout>