<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customerEditFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hintFirstName"
                android:maxWidth="@dimen/custom_max_width"
                android:minWidth="@dimen/custom_min_width"
                android:minHeight="@dimen/custom_min_height">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAppTxtCustomerFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customerEditLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hintLastName"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAppTxtCustomerLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customerEditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hintEmail"
                android:maxWidth="@dimen/custom_max_width"
                android:minWidth="@dimen/custom_min_width"
                android:minHeight="@dimen/custom_min_height">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAppTxtCustomerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customerEditPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hintPhone"
                android:maxWidth="@dimen/custom_max_width"
                android:minWidth="@dimen/custom_min_width"
                android:minHeight="@dimen/custom_min_height">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAppTxtCustomerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPhonetic"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/customerSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSubmit" />

            <Button
                android:id="@+id/customerDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnDelete" />

            <Button
                android:id="@+id/customerCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCancel" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>