<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/RpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPass"
                android:maxWidth="@dimen/custom_max_width"
                android:minWidth="@dimen/custom_min_width"
                android:minHeight="@dimen/custom_min_height" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/RpPasswordValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnRpSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSubmit"
                app:icon="@drawable/ic_baseline_create_24" />

            <Button
                android:id="@+id/btnRpCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCancel"
                app:icon="@drawable/ic_baseline_delete_24" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
